# dsai

./: .gitignore
FCAI1/: midterm_collection.py  midterm_collection.txt
FCAI1/Assignment 2/: add_trasnpose_to_matrix.py  graphics2b.py  graphics3.py  matrix22.py  matrix_m.py  show_rows.py  square_matrix.py
FCAI1/Assignment1/: index.py  list_dictionary.py  maths.py
FCAI1/Assignment10/: Assignment10.ipynb
FCAI1/Assignment2/: graphics2a.py  matrix43.py  matrix_product.py  trasnpose_matrix.py  vector10.py
FCAI1/Assignment3/: Untitled.ipynb  Untitled1.ipynb  colab_test.py  pandas_test.py  report.csv
FCAI1/Assignment3/.ipynb_checkpoints/: Untitled1-checkpoint.ipynb  colab_test-checkpoint.py
FCAI1/Assignment4/: cifar10.py  iris2d.py  iris3d.py  mnist_digits.py  theory.py  wines.csv  wines.py
FCAI1/Assignment5/: assignment5.ipynb
FCAI1/Assignment6/: assignment6.ipynb
FCAI1/Assignment7/: Assignment7.ipynb
FCAI1/Assignment8/: Assignment8.ipynb  Lab8-FCAI-CNN-2.ipynb
FCAI1/Assignment9/: Assignment9.ipynb
FCAI1/HW3/trained_models/: decision_tree_model.pkl  knn_model.pkl  support_vector_classifier_model.pkl
FCAI1/Homeworks/: HW1.ipynb  HW2.ipynb
FCAI1/Homeworks/HW3/: HW3.ipynb
FCAI1/Homeworks/HW4/: HW4.ipynb  TempHW4.ipynb
FCAI1/Homeworks/HW5/: HW5.ipynb
IAS1/Assignment1/: ex2.py  ex2student.py
IAS1/Assignment2/: movement.ttt  square.py
IAS1/Assignment3/: circle.py  ellipsoid.py  hexagonal.py  main.py  movement.ttt  parallelogram.py  polygon.py  rectangle.py  shared_methods.py  trapezoid.py  triangle.py  vrep.py
IAS1/Assignment4/: ex4_student.py  shared_methods.py
IAS1/Assignment5/: ex5_student.py  ex5_student_original.py  remoteApi.txt  shared_methods.py
IAS1/Assignment6/: ex6_student.py  original.py  shared_methods.py
IAS1/Assignment7/: ex7_student.py
IAS1/Assignment8/: ex8_student.py  helpers.py  original8.py
PIP1/: random.database.sqbpro
PIP1/Assignment1/: calculator.py  integers.py  random_names.py  rectangle.py  sphere.py  student.py
PIP1/Assignment2/: date_conversion.py  for.py  grades.py  largest_factor.py  number_operations.py  password_validation.py  print_non_multiples.py  print_number_range.py  rock_paper_scissors.py  smallest_largest_number.py  sort_digits.py  temperature_conversion.py  tic_tac_toe.py  tic_tac_toe_computer.py  tickets.py  transpose.py  while.py
PIP1/Assignment3/: a_shaped_sequence.py  digital_root.py  divisible_numbers.py  gcd_function.py  gcd_three.py  lcm_function.py  most_frequent_digit_in_range.py  palindrome.py  second_largest.py  v_shaped_sequence.py
PIP1/Assignment4/: book.py  complex_numbers.py  employee_management_system.py  health_record_management_system.py  inheritance.py  inventory_management_system.py  magic_methods.py  operator_overloading.py  polymorphism.py  student_management_system.py
PIP1/Assignment4/employee_management_system/: Assignment.py  Company.py  Department.py  (+3 more)
PIP1/Assignment6/: csv_lib.py  data_visualization.py  dictionary.py  exceptions.py  inline_loop.py  pandas_lib.py  person_exception.py  polynomial.py
PIP1/Assignment7/: greedy_path.cpp
PIP1/Assignment8/: task1.cpp  task2.sql  zoo.cpp
PIP1/DatabaseAndXml/: create_xml.py  insert_sqlite.py  messages.xml  person.xml  prepared_statement_sqlite.py  random.database.db  read_sqlite.py  read_xml.py
PIP1/Final/: final.cpp
PIP1/Homework 1/: sort_digits.py  tic_tac_toe.py  tic_tac_toe_computer.py
PIP1/c++/: arrays.cpp  example.cpp  functions.cpp  input_output.cpp  loops.cpp  main  matrices.cpp  matrices2.cpp  range_based_loop.cpp  references.cpp  setup.py  string_operations.cpp  vectors.cpp
PIP1/midterm/: lectures.py
ads/: README.md  app.py  cold_start.py  collaborative.py  config.py  content_based.py  evaluate.py  graph.py  requirements.txt  same_genre.py
ai_project/PatternScopeAI/: .cursorrules  .gitignore  CMakeLists.txt  CMakeLists_GUI.txt  README.md  launcher.sh  patternScopeAI.cmake  plan.txt  project_description.txt  project_status.txt  test_all.cpp
ai_project/PatternScopeAI/Theme/Common/ResConfigs/: natGUI.xml
ai_project/PatternScopeAI/res/: DevRes.xml  main.xml
ai_project/PatternScopeAI/res/tr/EN/: main.xml
ai_project/PatternScopeAI/src/: Info.plist  main.cpp  predictor.cpp  trainer.cpp
ai_project/PatternScopeAI/src/ai/: Engine.cpp  Engine.h
ai_project/PatternScopeAI/src/ai/features/: EdgeMapExtractor.cpp  EdgeMapExtractor.h  FeatureExtractor.h  HOGExtractor.cpp  HOGExtractor.h  PixelGridExtractor.cpp  PixelGridExtractor.h
ai_project/PatternScopeAI/src/ai/models/: KNN.cpp  KNN.h  MiniMLP.cpp  MiniMLP.h  Model.h  NaiveBayes.cpp  NaiveBayes.h
ai_project/PatternScopeAI/src/ai/rules/: RuleEngine.cpp  RuleEngine.h  StructuralFeatures.cpp  StructuralFeatures.h
ai_project/PatternScopeAI/src/ai/search/: AStarMatcher.cpp  AStarMatcher.h  Template.cpp  Template.h
ai_project/PatternScopeAI/src/core/: ResourcePath.cpp  ResourcePath.h
ai_project/PatternScopeAI/src/data/: ConfusionMatrix.cpp  ConfusionMatrix.h  DataManager.cpp  DataManager.h  Dataset.cpp  Dataset.h  FeatureVector.cpp  FeatureVector.h  Image.cpp  Image.h  MNISTLoader.cpp  MNISTLoader.h  Mode.h
ai_project/PatternScopeAI/src/gui/: Application.h  DrawingCanvas.cpp  DrawingCanvas.h  FileDialog.h  FileDialog.mm  FileDialog_win.cpp  Info.plist  MainView.cpp  MainView.h  MainWindow.h  StartView.cpp  StartView.h  main.cpp  main_gui.cpp
mlst/: README.md  api.py  config.py  dashboard.py  data_cleaning.py  data_ingestion.py  data_loading.py  dataset_aggregation_by_day.py  dev_explanation.txt  forecast.py  forecast_lstm.py  forecast_prophet.py  impact.py  ingest.py  lstm_forecast.py  main.py  personas.py  preprocess.py  recommend.py  requirements.txt
mlst/dashboard_tabs/: __init__.py  tab_data_processing.py  tab_eda.py  tab_forecast.py  tab_forecast_compare.py  tab_forecast_lstm.py  tab_impact.py  tab_itinerary.py  tab_recommendations.py
mlst/dataset_generators/: README.md  dataset_polluter.py  generate_all_datasets.py  generate_bookings.py  generate_bus_schedules.py  generate_events.py  generate_weather.py  generate_web_analytics.py
(+21 files in other folders)
